stl-test/Tests/array_view/array_view/Negative/test2.cpp
//#error
#include <vector>
#include <array_view>
int main()
{
    std::vector<float> v(10);
    std::array_view<int, 1> av(v);
}
